gateway.yml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: GatewayClass
metadata:
  name: apisix-gateway-class
spec:
  controllerName: apisix.apache.org/gateway-controller
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: Gateway
metadata:
  name: apisix-gateway
spec:
  gatewayClassName: apisix-gateway-class
  listeners:
    - name: http
      protocol: HTTP
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: dispatch
spec:
  parentRefs:
    - name: apisix-gateway
  rules:
    - matches:
      - headers:
          - type: Exact
            name: to
            value: left
      backendRefs:
      - name: left
        port: 80
    - backendRefs:
      - name: right
        port: 80
